# arduino-cli

./: .gitignore  BUILD.bazel  Taskfile.yml  WORKSPACE  deps.bzl  go.sum  transitive_deps.bzl
arduino/builder/: BUILD.bazel
arduino/cores/: BUILD.bazel
arduino/cores/packageindex/: BUILD.bazel
arduino/cores/packagemanager/: BUILD.bazel
arduino/globals/: BUILD.bazel
arduino/libraries/: BUILD.bazel
arduino/libraries/librariesindex/: BUILD.bazel
arduino/libraries/librariesmanager/: BUILD.bazel
arduino/libraries/librariesresolver/: BUILD.bazel
arduino/monitors/: BUILD.bazel
arduino/resources/: BUILD.bazel
arduino/security/: BUILD.bazel
arduino/sketch/: BUILD.bazel
arduino/sketches/: BUILD.bazel
arduino/utils/: BUILD.bazel
cli/: BUILD.bazel
cli/board/: BUILD.bazel
cli/burnbootloader/: BUILD.bazel
cli/cache/: BUILD.bazel
cli/compile/: BUILD.bazel
cli/completion/: BUILD.bazel
cli/config/: BUILD.bazel
cli/core/: BUILD.bazel
cli/daemon/: BUILD.bazel
cli/debug/: BUILD.bazel
cli/errorcodes/: BUILD.bazel
cli/feedback/: BUILD.bazel
cli/generatedocs/: BUILD.bazel
cli/globals/: BUILD.bazel
cli/instance/: BUILD.bazel
cli/lib/: BUILD.bazel
cli/outdated/: BUILD.bazel
cli/output/: BUILD.bazel
cli/sketch/: BUILD.bazel
cli/update/: BUILD.bazel
cli/upgrade/: BUILD.bazel
cli/upload/: BUILD.bazel
cli/version/: BUILD.bazel
client_example/: BUILD.bazel
commands/: BUILD.bazel
commands/board/: BUILD.bazel
commands/compile/: BUILD.bazel
commands/core/: BUILD.bazel
commands/daemon/: BUILD.bazel
commands/debug/: BUILD.bazel
commands/lib/: BUILD.bazel
commands/upload/: BUILD.bazel
configuration/: BUILD.bazel
docsgen/: BUILD.bazel
executils/: BUILD.bazel
httpclient/: BUILD.bazel
i18n/: BUILD.bazel  rice-box.go
i18n/cmd/: BUILD.bazel
i18n/cmd/ast/: BUILD.bazel
i18n/cmd/commands/: BUILD.bazel
i18n/cmd/commands/catalog/: BUILD.bazel
i18n/cmd/commands/transifex/: BUILD.bazel
i18n/cmd/po/: BUILD.bazel
i18n/data/: it_IT.po  pt_BR.po
inventory/: BUILD.bazel
legacy/builder/: BUILD.bazel
legacy/builder/builder_utils/: BUILD.bazel
legacy/builder/constants/: BUILD.bazel
legacy/builder/ctags/: BUILD.bazel
legacy/builder/gohasissues/: BUILD.bazel
legacy/builder/i18n/: BUILD.bazel
legacy/builder/phases/: BUILD.bazel
legacy/builder/test/: BUILD.bazel
legacy/builder/types/: BUILD.bazel
legacy/builder/utils/: BUILD.bazel
rpc/commands/: BUILD.bazel
rpc/debug/: BUILD.bazel
rpc/monitor/: BUILD.bazel
rpc/settings/: BUILD.bazel
table/: BUILD.bazel
telemetry/: BUILD.bazel
version/: BUILD.bazel
