load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = [
        "cli.go",
        "usage.go",
    ],
    importpath = "github.com/arduino/arduino-cli/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/board",
        "//cli/burnbootloader",
        "//cli/cache",
        "//cli/compile",
        "//cli/completion",
        "//cli/config",
        "//cli/core",
        "//cli/daemon",
        "//cli/debug",
        "//cli/errorcodes",
        "//cli/feedback",
        "//cli/generatedocs",
        "//cli/globals",
        "//cli/lib",
        "//cli/outdated",
        "//cli/output",
        "//cli/sketch",
        "//cli/update",
        "//cli/upgrade",
        "//cli/upload",
        "//cli/version",
        "//i18n",
        "//inventory",
        "@com_github_mattn_go_colorable//:go-colorable",
        "@com_github_rifflock_lfshook//:lfshook",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
