load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_example_lib",
    srcs = ["main.go"],
    importpath = "github.com/arduino/arduino-cli/client_example",
    visibility = ["//visibility:private"],
    deps = [
        "//rpc/commands",
        "//rpc/debug",
        "//rpc/settings",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "client_example",
    embed = [":client_example_lib"],
    visibility = ["//visibility:public"],
)
