load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "commands",
    srcs = [
        "bundled_tools.go",
        "bundled_tools_ctags.go",
        "bundled_tools_serial_discovery.go",
        "core.go",
        "download.go",
        "instances.go",
        "lib.go",
        "progress.go",
        "version.go",
    ],
    importpath = "github.com/arduino/arduino-cli/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//arduino/cores",
        "//arduino/cores/packageindex",
        "//arduino/cores/packagemanager",
        "//arduino/libraries",
        "//arduino/libraries/librariesindex",
        "//arduino/libraries/librariesmanager",
        "//arduino/resources",
        "//arduino/security",
        "//cli/globals",
        "//configuration",
        "//executils",
        "//httpclient",
        "//rpc/commands",
        "@com_github_arduino_go_paths_helper//:go-paths-helper",
        "@com_github_arduino_go_properties_orderedmap//:go-properties-orderedmap",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_viper//:viper",
        "@st_bug_go_downloader_v2//:downloader",
        "@st_bug_go_relaxed_semver//:relaxed-semver",
    ],
)
