load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "docsgen_lib",
    srcs = ["main.go"],
    importpath = "github.com/arduino/arduino-cli/docsgen",
    visibility = ["//visibility:private"],
    deps = [
        "//cli",
        "@com_github_spf13_cobra//doc",
    ],
)

go_binary(
    name = "docsgen",
    embed = [":docsgen_lib"],
    visibility = ["//visibility:public"],
)
