load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "inventory",
    srcs = ["inventory.go"],
    importpath = "github.com/arduino/arduino-cli/inventory",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/feedback",
        "@com_github_gofrs_uuid//:uuid",
        "@com_github_spf13_viper//:viper",
    ],
)
