load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resources",
    srcs = [
        "checksums.go",
        "helpers.go",
        "install.go",
        "structs.go",
    ],
    importpath = "github.com/arduino/arduino-cli/arduino/resources",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_arduino_go_paths_helper//:go-paths-helper",
        "@com_github_codeclysm_extract_v3//:extract",
        "@st_bug_go_cleanup//:cleanup",
        "@st_bug_go_downloader_v2//:downloader",
    ],
)

go_test(
    name = "resources_test",
    srcs = [
        "helpers_test.go",
        "resources_test.go",
    ],
    embed = [":resources"],
    deps = [
        "//httpclient",
        "@com_github_arduino_go_paths_helper//:go-paths-helper",
        "@com_github_stretchr_testify//require",
        "@st_bug_go_downloader_v2//:downloader",
    ],
)
