load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sketches",
    srcs = ["sketches.go"],
    importpath = "github.com/arduino/arduino-cli/arduino/sketches",
    visibility = ["//visibility:public"],
    deps = ["@com_github_arduino_go_paths_helper//:go-paths-helper"],
)

go_test(
    name = "sketches_test",
    srcs = ["sketches_test.go"],
    data = glob(["testdata/**"]),
    embed = [":sketches"],
    deps = [
        "@com_github_arduino_go_paths_helper//:go-paths-helper",
        "@com_github_stretchr_testify//require",
    ],
)
