load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "compile",
    srcs = ["compile.go"],
    importpath = "github.com/arduino/arduino-cli/cli/compile",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/errorcodes",
        "//cli/feedback",
        "//cli/instance",
        "//commands/compile",
        "//commands/upload",
        "//rpc/commands",
        "@com_github_arduino_go_paths_helper//:go-paths-helper",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
