load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "completion",
    srcs = ["completion.go"],
    importpath = "github.com/arduino/arduino-cli/cli/completion",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/errorcodes",
        "//cli/feedback",
        "@com_github_spf13_cobra//:cobra",
    ],
)
