load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "dump.go",
        "init.go",
    ],
    importpath = "github.com/arduino/arduino-cli/cli/config",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/errorcodes",
        "//cli/feedback",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@in_gopkg_yaml_v2//:yaml.v2",
    ],
)
