load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "daemon",
    srcs = ["daemon.go"],
    importpath = "github.com/arduino/arduino-cli/cli/daemon",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/errorcodes",
        "//cli/feedback",
        "//cli/globals",
        "//commands/daemon",
        "//rpc/commands",
        "//rpc/debug",
        "//rpc/monitor",
        "//rpc/settings",
        "//telemetry",
        "@com_github_segmentio_stats_v4//:stats",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
