load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "feedback",
    srcs = [
        "exported.go",
        "feedback.go",
    ],
    importpath = "github.com/arduino/arduino-cli/cli/feedback",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:logrus"],
)
